# smartformat-validate-action

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml  renovate.json5  validate.py
.github/workflows/: ci.yml  release-please.yml  release.yml
tests/: test_validate.py
tests/fixtures/: missing_namespace.xml  missing_required.xml  valid_feed.xml
