[project]
name = "smartformat-validate-action"
version = "0.1.0"
description = "Validate RSS feeds against the SmartNews SmartFormat v2.1 specification."
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
